--- a/src/css/_partidos.css
+++ b/src/css/_partidos.css
@@ -62,13 +62,13 @@
 }
 
 .partidos-grafico-titulo {
-    font-size: 4rem;
+    font-size: 3rem;
     font-family: var(--fontBislai);
     font-weight: bold;
     display: inline-block;
     margin: 0;
-    padding: 2rem 5rem;
-    background-color: white;
+    padding: 2rem 3rem;
+    background-color: var(--white);
     border-top: 10px solid var(--ciudadanos);
     box-shadow: 0 15px 35px rgba(49, 41, 83, .2), 0 5px 15px rgba(0, 0, 0 , .1);
 }
