cambios en la navegacion de estadisticas y partidos

--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -21,7 +21,7 @@
     --bunting: #271764;
     --woodsmoke: #19160a;
     --colorlink: #1624f7;
-    --bgcTabs: #f45f64;
+    --bgcTabs: #46E3CF;
     --searchHover: hsl(201, 106%, 24%);
     --bgcHeader: #021e5c;
     --pink: #f9dfe7;
