--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -354,17 +354,17 @@ http://www.tipue.com/search
 /* search box */
 
 #tipue_search_input {
-    color: #333;
+    color: var(--pureblack);
     border: 0;
     padding: 16px;
     outline-color: var(--chunta);
     margin: 0;
     height: 48px;
-    background-color: #f1f1f1;
+    background-color: #d3d3d3;
     font-family: var(--fontSystem);
-    border-radius: 0;
-    border: 1px solid #1b305f;
-    border-right: 0;
+    border-radius: 5px;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
 }
 
 .tipue_search_icon {
@@ -519,13 +519,16 @@ http://www.tipue.com/search
     height: 48px;
     border: 0;
     border-radius: 0;
-    border: 1px solid #1b305f;
+    background-color: #d3d3d3;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
     cursor: pointer;
-    background-color: #1b305f;
     path {
-        fill: var(--white);
+        fill: var(--pureblack);
     }
     &:hover {
+        transition: background-color ease-in .3s;
         background-color: var(--chunta);
         path {
             fill: #1b305f;
@@ -891,7 +894,7 @@ path.q2-3 {
     display: inline-block;
     width: 30%;
     border-radius: 5px;
-    background-color: #fafafa;
+    background-color: #3BE4CF;
     padding: 1.5rem;
     min-height: 160px;
     vertical-align: top;
@@ -1338,6 +1341,18 @@ path.q2-3 {
         a {
             width: 50%;
             display: inline-block;
+        }
+    }
+
+    .grid-footer {
+        display: inline-block;
+        a {
+            width: 100%;
+            text-align: left;
+            margin-bottom: 1rem;
+            &:not(:first-child) {
+                width: 30%;
+            }
         }
     }
 
