--- a/css/styles.css
+++ b/css/styles.css
@@ -631,18 +631,18 @@ http://www.tipue.com/search
 /* search box */
 
 #tipue_search_input {
-    color: #333;
+    color: #000;
     border: 0;
     padding: 1rem;
     outline-color: #efb027;
     margin: 0;
     height: 48px;
-    background-color: #f1f1f1;
+    background-color: #d3d3d3;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Helvetica Neue", Helvetica, sans-serif;
-    border-radius: 0;
-    border: 1px solid #1b305f;
-    border-right: 0;
+    border-radius: 5px;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
 }
 
 .tipue_search_icon {
@@ -796,16 +796,19 @@ http://www.tipue.com/search
     height: 48px;
     border: 0;
     border-radius: 0;
-    border: 1px solid #1b305f;
+    background-color: #d3d3d3;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
     cursor: pointer;
-    background-color: #1b305f;
 }
 
 .btn-search path {
-        fill: #fff;
+        fill: #000;
     }
 
 .btn-search:hover {
+        transition: background-color ease-in .3s;
         background-color: #efb027;
     }
 
@@ -1175,7 +1178,7 @@ path.q2-3 {
     display: inline-block;
     width: 30%;
     border-radius: 5px;
-    background-color: #fafafa;
+    background-color: #3BE4CF;
     padding: 1.5rem;
     min-height: 160px;
     vertical-align: top;
@@ -1634,6 +1637,18 @@ path.q2-3 {
             width: 50%;
             display: inline-block;
         }
+
+    .grid-footer {
+        display: inline-block;
+    }
+        .grid-footer a {
+            width: 100%;
+            text-align: left;
+            margin-bottom: 1rem;
+        }
+            .grid-footer a:not(:first-child) {
+                width: 30%;
+            }
 
 }
 
