--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -37,6 +37,14 @@ body {
     align-items: center;
 }
 
+.nav-grid-first {
+    display: inline-grid;
+    justify-self: start;
+    .link-name {
+        font-size: 2rem;
+    }
+}
+
 .header-home {
     background-color: transparent;
     position: absolute;
@@ -48,11 +56,6 @@ body {
     .link-name {
         color: var(--white);
     }
-}
-
-.nav-grid-first {
-    display: inline-grid;
-    justify-self: start;
 }
 
 .nav-grid-second {
@@ -1450,3 +1453,20 @@ path.q2-3 {
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
 }
+
+/* stylelint-disable */
+
+.tp-plenos {
+    .bgc-header-home {
+        &:hover {
+            transition: all ease-in-out .3s;
+            background-color: hsl(221, 76%, 38%);
+            svg {
+                transition: all ease-in-out .3s;
+                transform: scale(1.25);
+            }
+        }
+    }
+}
+
+/* stylelint-enable */
