--- a/css/styles.css
+++ b/css/styles.css
@@ -1550,17 +1550,29 @@ path.q2-3 {
 
 @media only screen and (max-width: 48em) {
 
-    .bislai-home-body-left-text,
-    .bislai-home-body-right {
+    .bislai-home-body-left-text {
         width: auto;
-        left: 20px;
-        top: 13vh;
+        left: 10px;
+        top: 20vh;
+    }
+
+    .column {
+        height: auto;
+    }
+        .column:after {
+            height: auto;
+        }
+
+    .bislai-home-card-title {
+        font-size: 1rem;
     }
 
     .bislai-home-card {
-        left: 0;
-        bottom: 20%;
+        position: static;
     }
+        .bislai-home-card:not(:last-child) {
+            margin-right: 0;
+        }
 
     .bislai-home-card-element {
         width: 100%;
