--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -1252,10 +1252,9 @@ path.q2-3 {
     transform: translate(-50%, 0);
 }
 
-@media only screen and (max-width: 48em) {
+@media only screen and (max-width: 46em) {
 
     .bislai-home-body-left-text {
-        width: auto;
         left: 10px;
         top: 20vh;
     }
@@ -1263,7 +1262,7 @@ path.q2-3 {
     .column {
         height: auto;
         &:after {
-            height: auto;
+            height: 30%;
         }
     }
 
@@ -1295,6 +1294,17 @@ path.q2-3 {
         max-width: 90%;
         padding: 1rem;
         margin: 0 auto;
+    }
+}
+
+@media only screen and (max-width: 48em) {
+
+    .bislai-home-body-left-text {
+        width: auto;
+    }
+
+    .column {
+        height: 60vh;
     }
 
     .bislai-home-body-left-container {
