--- a/css/styles.css
+++ b/css/styles.css
@@ -866,7 +866,8 @@ http://www.tipue.com/search
 
 #tab1:checked~.contenido1,
 #tab2:checked~.contenido2,
-#tab3:checked~.contenido3 {
+#tab3:checked~.contenido3,
+#tab4:checked~.contenido4 {
     display: block;
     background-color: #021e5c;
     display: grid;
@@ -1604,7 +1605,8 @@ path.q2-3 {
 
     #tab1:checked ~ .contenido1,
     #tab2:checked ~ .contenido2,
-    #tab3:checked ~ .contenido3 {
+    #tab3:checked ~ .contenido3,
+    #tab4:checked ~ .contenido4 {
         grid-template-columns: 100%;
         padding: 1rem;
     }
@@ -1690,6 +1692,10 @@ path.q2-3 {
         max-width: 90%;
         padding: 1rem;
         margin: 0 auto;
+    }
+
+    .label-record {
+        padding: 1rem;
     }
 }
 
