--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -1255,6 +1255,32 @@ path.q2-3 {
 
 @media only screen and (max-width: 48em) {
 
+    .scroll__text {
+        width: 100%;
+        max-width: 100%;
+        background-color: transparent;
+        padding: 1rem;
+    }
+
+    #chart {
+        max-width: 100vw;
+        width: 100%;
+    }
+
+    .step {
+        p {
+            background-color: #fff;
+        }
+        .title-estadisticas {
+            background-color: #111;
+            font-size: 1rem;
+        }
+    }
+
+    .scroll__graphic {
+        float: none;
+    }
+
     .bislai-home-body-left-text {
         width: auto;
     }
