--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -3,6 +3,7 @@
         "Helvetica Neue", Helvetica, sans-serif;
     --fontBislai: "Fjalla One", sans-serif;
     --fonttext: 'Source Sans Pro', sans-serif;
+    --fontFair: 'Playfair Display', serif;
     --serif: "Georgia", serif;
     --black: #121;
     --pureblack: #000;
