--- a/css/styles.css
+++ b/css/styles.css
@@ -1562,13 +1562,15 @@ path.q2-3 {
         max-width: 100vw;
         width: 100%;
     }
-        .step p {
-            background-color: #fff;
-        }
         .step .title-estadisticas {
             background-color: #111;
             font-size: 1rem;
         }
+
+    .step-blanco {
+        background-color: #efefef;
+        padding: .5rem;
+    }
 
     .scroll__graphic {
         float: none;
