--- a/css/styles.css
+++ b/css/styles.css
@@ -1088,6 +1088,22 @@ path.q2-3 {
         display: none;
     }
 
+.tooltip-pp {
+    border-color: #0080b8;
+    min-width: 30rem;
+    height: 80vh;
+    right: 0;
+}
+
+.tooltip-pp .tooltipPartido .titulo-partido {
+            display: block;
+            font-weight: normal;
+        }
+
+.tooltip-pp .tooltipPartido .resultadoVotos:not(:first-child) {
+            font-weight: normal;
+        }
+
 /* stylelint-enable */
 
 .mapa-container {
