--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -805,10 +805,11 @@ path.q2-3 {
 
 
 .tooltip-pp {
-    border-color: var(--pp);
+    border-color: #46457b;
     min-width: 30rem;
     height: 80vh;
-    right: 0;
+    right: 1vw;
+    background-color: rgba(255, 255, 255, .8);
     .tooltipPartido {
         .titulo-partido {
             display: block;
@@ -817,6 +818,26 @@ path.q2-3 {
         .resultadoVotos:not(:first-child) {
             font-weight: normal;
         }
+    }
+}
+
+.distritosPP {
+    fill: rgba(255, 255, 255, .1);
+    stroke: #1b2156;
+    stroke-opacity: .3;
+    cursor: pointer;
+    transition: all ease-in .3s;
+    &:hover {
+        stroke-width: 1;
+        fill: #2be5cf;
+        fill-opacity: .8;
+    }
+}
+
+.mapa-container-pp {
+    .tooltip-title {
+        border-color: #46457b;
+        background-color: rgba(255, 255, 255, .8);
     }
 }
 
