--- a/css/styles.css
+++ b/css/styles.css
@@ -1088,7 +1088,8 @@ path.q2-3 {
         display: none;
     }
 
-.tooltip-pp {
+.tooltip-pp,
+.tooltip-psoe {
     border-color: #46457b;
     min-width: 30rem;
     height: 80vh;
@@ -1096,14 +1097,18 @@ path.q2-3 {
     background-color: rgba(255, 255, 255, .8);
 }
 
-.tooltip-pp .tooltipPartido .titulo-partido {
+.tooltip-pp .tooltipPartido .titulo-partido, .tooltip-psoe .tooltipPartido .titulo-partido {
             display: block;
             font-weight: normal;
         }
 
-.tooltip-pp .tooltipPartido .resultadoVotos:not(:first-child) {
+.tooltip-pp .tooltipPartido .resultadoVotos:not(:first-child), .tooltip-psoe .tooltipPartido .resultadoVotos:not(:first-child) {
             font-weight: normal;
         }
+
+.tooltip-psoe {
+    border-color: #421023;
+}
 
 .distritosPP {
     fill: rgba(255, 255, 255, .1);
@@ -1114,6 +1119,20 @@ path.q2-3 {
 }
 
 .distritosPP:hover {
+        stroke-width: 1;
+        fill: #2be5cf;
+        fill-opacity: .8;
+    }
+
+.distritosPSOE {
+    fill: rgba(255, 255, 255, .1);
+    stroke: #1b2156;
+    stroke-opacity: .3;
+    cursor: pointer;
+    transition: all ease-in .3s;
+}
+
+.distritosPSOE:hover {
         stroke-width: 1;
         fill: #2be5cf;
         fill-opacity: .8;
