creando un estilo de mapbox para el mapa del psoe

--- a/css/styles.css
+++ b/css/styles.css
@@ -1134,8 +1134,8 @@ path.q2-3 {
 
 .distritosPSOE:hover {
         stroke-width: 1;
-        fill: #2be5cf;
-        fill-opacity: .8;
+        fill: #09176d;
+        fill-opacity: .7;
     }
 
 .mapa-container-pp .tooltip-title {
