--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -847,8 +847,8 @@ path.q2-3 {
     transition: all ease-in .3s;
     &:hover {
         stroke-width: 1;
-        fill: #2be5cf;
-        fill-opacity: .8;
+        fill: #09176d;
+        fill-opacity: .7;
     }
 }
 
