--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -805,7 +805,8 @@ path.q2-3 {
 
 
 .tooltip-pp,
-.tooltip-psoe {
+.tooltip-psoe,
+.tooltip-cha {
     border-color: #46457b;
     min-width: 30rem;
     height: 80vh;
@@ -824,6 +825,10 @@ path.q2-3 {
 
 .tooltip-psoe {
     border-color: #421023;
+}
+
+.tooltip-cha {
+    border-color: #e30613;
 }
 
 .distritosPP {
@@ -852,9 +857,29 @@ path.q2-3 {
     }
 }
 
+.distritosCHA {
+    fill: rgba(255, 255, 255, .1);
+    stroke: #1b2156;
+    stroke-opacity: .3;
+    cursor: pointer;
+    transition: all ease-in .3s;
+    &:hover {
+        stroke-width: 1;
+        fill: #2b384d;
+        fill-opacity: .7;
+    }
+}
+
 .mapa-container-pp {
     .tooltip-title {
         border-color: #46457b;
+        background-color: rgba(255, 255, 255, .8);
+    }
+}
+
+.mapa-container-cha {
+    .tooltip-title {
+        border-color: #e30613;
         background-color: rgba(255, 255, 255, .8);
     }
 }
