--- a/css/styles.css
+++ b/css/styles.css
@@ -1090,7 +1090,9 @@ path.q2-3 {
 
 .tooltip-pp,
 .tooltip-psoe,
-.tooltip-cha {
+.tooltip-cha,
+.tooltip-cs,
+.tooltip-zec {
     border-color: #46457b;
     min-width: 30rem;
     height: 80vh;
@@ -1098,12 +1100,12 @@ path.q2-3 {
     background-color: rgba(255, 255, 255, .8);
 }
 
-.tooltip-pp .tooltipPartido .titulo-partido, .tooltip-psoe .tooltipPartido .titulo-partido, .tooltip-cha .tooltipPartido .titulo-partido {
+.tooltip-pp .tooltipPartido .titulo-partido, .tooltip-psoe .tooltipPartido .titulo-partido, .tooltip-cha .tooltipPartido .titulo-partido, .tooltip-cs .tooltipPartido .titulo-partido, .tooltip-zec .tooltipPartido .titulo-partido {
             display: block;
             font-weight: normal;
         }
 
-.tooltip-pp .tooltipPartido .resultadoVotos:not(:first-child), .tooltip-psoe .tooltipPartido .resultadoVotos:not(:first-child), .tooltip-cha .tooltipPartido .resultadoVotos:not(:first-child) {
+.tooltip-pp .tooltipPartido .resultadoVotos:not(:first-child), .tooltip-psoe .tooltipPartido .resultadoVotos:not(:first-child), .tooltip-cha .tooltipPartido .resultadoVotos:not(:first-child), .tooltip-cs .tooltipPartido .resultadoVotos:not(:first-child), .tooltip-zec .tooltipPartido .resultadoVotos:not(:first-child) {
             font-weight: normal;
         }
 
@@ -1152,6 +1154,34 @@ path.q2-3 {
 }
 
 .distritosCHA:hover {
+        stroke-width: 1;
+        fill: #a21337;
+        fill-opacity: .7;
+    }
+
+.distritosCS {
+    fill: rgba(255, 255, 255, .1);
+    stroke: #1b2156;
+    stroke-opacity: .3;
+    cursor: pointer;
+    transition: all ease-in .3s;
+}
+
+.distritosCS:hover {
+        stroke-width: 1;
+        fill: #2b384d;
+        fill-opacity: .7;
+    }
+
+.distritosZEC {
+    fill: rgba(255, 255, 255, .1);
+    stroke: #1b2156;
+    stroke-opacity: .3;
+    cursor: pointer;
+    transition: all ease-in .3s;
+}
+
+.distritosZEC:hover {
         stroke-width: 1;
         fill: #2b384d;
         fill-opacity: .7;
