--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -806,7 +806,9 @@ path.q2-3 {
 
 .tooltip-pp,
 .tooltip-psoe,
-.tooltip-cha {
+.tooltip-cha,
+.tooltip-cs,
+.tooltip-zec {
     border-color: #46457b;
     min-width: 30rem;
     height: 80vh;
@@ -858,6 +860,32 @@ path.q2-3 {
 }
 
 .distritosCHA {
+    fill: rgba(255, 255, 255, .1);
+    stroke: #1b2156;
+    stroke-opacity: .3;
+    cursor: pointer;
+    transition: all ease-in .3s;
+    &:hover {
+        stroke-width: 1;
+        fill: #a21337;
+        fill-opacity: .7;
+    }
+}
+
+.distritosCS {
+    fill: rgba(255, 255, 255, .1);
+    stroke: #1b2156;
+    stroke-opacity: .3;
+    cursor: pointer;
+    transition: all ease-in .3s;
+    &:hover {
+        stroke-width: 1;
+        fill: #2b384d;
+        fill-opacity: .7;
+    }
+}
+
+.distritosZEC {
     fill: rgba(255, 255, 255, .1);
     stroke: #1b2156;
     stroke-opacity: .3;
