--- a/css/styles.css
+++ b/css/styles.css
@@ -1155,7 +1155,7 @@ path.q2-3 {
 
 .distritosCHA:hover {
         stroke-width: 1;
-        fill: #a21337;
+        fill: #26186e;
         fill-opacity: .7;
     }
 
