--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -1675,3 +1675,10 @@ path.q2-3 {
     width: max-content;
     margin-top: 1rem;
 }
+
+.distrito {
+    .domain {
+        fill: none;
+        stroke: #000;
+    }
+}
