sustituyendo Georgia por Roboto ya que la caja baja de la fuente dificultaba la lectura de los números | corregidos botones de anterior y posterior de los plenos del 2018

--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -4,7 +4,7 @@
 
 body {
     line-height: 1.5;
-    font-family: var(--serif);
+    font-family: var(--fontRoboto);
 }
 
 .font-s {
@@ -12,7 +12,7 @@ body {
 }
 
 .font-serif {
-    font-family: var(--serif);
+    font-family: var(--fontRoboto);
 }
 
 .font-bislai {
@@ -1202,10 +1202,14 @@ path.q2-3 {
 .partido-card-concejales {
     transition: opacity .3s ease-in;
     font-size: .8rem;
-    font-family: var(--fonttext);
+    font-family: var(--fontRoboto);
     margin: .5rem 0;
     font-weight: 600;
     text-align: left;
+}
+
+.partido-card-concejales {
+    font-weight: 400;
 }
 
 .estadisticas-grid {
@@ -1674,11 +1678,4 @@ path.q2-3 {
     text-align: right;
     width: max-content;
     margin-top: 1rem;
-}
-
-.distrito {
-    .domain {
-        fill: none;
-        stroke: #000;
-    }
 }
