--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ button:-moz-focusring,
 
 body {
     line-height: 1.5;
-    font-family: "Georgia", serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .font-s {
@@ -303,7 +303,7 @@ body {
 }
 
 .font-serif {
-    font-family: "Georgia", serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .font-bislai {
@@ -1492,10 +1492,14 @@ path.q2-3 {
 .partido-card-concejales {
     transition: opacity .3s ease-in;
     font-size: .8rem;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     margin: .5rem 0;
     font-weight: 600;
     text-align: left;
+}
+
+.partido-card-concejales {
+    font-weight: 400;
 }
 
 .estadisticas-grid {
@@ -1969,11 +1973,6 @@ path.q2-3 {
     width: max-content;
     margin-top: 1rem;
 }
-
-.distrito .domain {
-        fill: none;
-        stroke: #000;
-    }
 
 .maw-70 {
   max-width: 70rem;
