--- a/css/styles.css
+++ b/css/styles.css
@@ -294,7 +294,7 @@ button:-moz-focusring,
 
 body {
     line-height: 1.5;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .font-s {
@@ -303,7 +303,7 @@ body {
 }
 
 .font-serif {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .font-bislai {
@@ -1492,7 +1492,7 @@ path.q2-3 {
 .partido-card-concejales {
     transition: opacity .3s ease-in;
     font-size: .8rem;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     margin: .5rem 0;
     font-weight: 600;
     text-align: left;
