--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -3,7 +3,7 @@
         "Helvetica Neue", Helvetica, sans-serif;
     --fontBislai: "Fjalla One", sans-serif;
     --fontFair: 'Playfair Display', serif;
-    --fontRoboto: 'IBM Plex Sans', sans-serif;
+    --fontPlex: 'IBM Plex Sans', sans-serif;
     --serif: "Georgia", serif;
     --black: #121;
     --pureblack: #000;
