incluyendo el texto de cada uno de los porcentajes en las graficas

--- a/src/css/_distritos.css
+++ b/src/css/_distritos.css
@@ -8,6 +8,11 @@
             stroke: none;
         }
     }
+    .xAxis {
+        .domain {
+            stroke-width: 2px;
+        }
+    }
     text {
         font-family: var(--fontPlex);
         font-size: 12px;
