--- a/css/styles.css
+++ b/css/styles.css
@@ -4183,6 +4183,10 @@ path.q2-3 {
             stroke: none;
         }
 
+.distrito .xAxis .domain {
+            stroke-width: 2px;
+        }
+
 .distrito text {
         font-family: 'IBM Plex Sans', sans-serif;
         font-size: 0.75rem;
