ajustando el texto de los tooltip

--- a/css/styles.css
+++ b/css/styles.css
@@ -4197,4 +4197,8 @@ path.q2-3 {
         font-weight: 600;
     }
 
+.distrito .tooltip-porcentaje {
+        font-weight: 600;
+    }
+
 /*# sourceMappingURL=styles.css.map */
