pintando los ticks horziontales para las graficas

--- a/src/css/_distritos.css
+++ b/src/css/_distritos.css
@@ -7,6 +7,10 @@
         .domain {
             stroke: none;
         }
+        line {
+            stroke: #111;
+            stroke-dasharray: 3px;
+        }
     }
     .xAxis {
         .domain {
