--- a/css/styles.css
+++ b/css/styles.css
@@ -4183,6 +4183,11 @@ path.q2-3 {
             stroke: none;
         }
 
+.distrito .yAxis line {
+            stroke: #111;
+            stroke-dasharray: 3px;
+        }
+
 .distrito .xAxis .domain {
             stroke-width: 2px;
         }
