--- a/src/css/_distritos.css
+++ b/src/css/_distritos.css
@@ -1,4 +1,5 @@
 .distrito {
+    margin: 1rem 0;
     .domain {
         fill: none;
         stroke: #000;
@@ -28,4 +29,10 @@
     .tooltip-porcentaje {
         font-weight: 600;
     }
+}
+
+.graficas-partido {
+    width: 100%;
+    max-width: 75vw;
+    margin: 0 auto;
 }
