--- a/src/css/_distritos.css
+++ b/src/css/_distritos.css
@@ -33,6 +33,15 @@
 
 .graficas-partido {
     width: 100%;
-    max-width: 75vw;
     margin: 0 auto;
+}
+
+@media only screen and (min-width: 64em) {
+
+    .graficas-partido {
+        width: 100%;
+        max-width: 75vw;
+        margin: 0 auto;
+    }
+
 }
