corrgiendo el texto de los mapas

--- a/css/styles.css
+++ b/css/styles.css
@@ -4219,7 +4219,7 @@ path.q2-3 {
 
     .graficas-partido {
         width: 100%;
-        max-width: 75vw;
+        max-width: 68rem;
         margin: 0 auto;
     }
 
