--- a/src/css/_distritos.css
+++ b/src/css/_distritos.css
@@ -40,7 +40,7 @@
 
     .graficas-partido {
         width: 100%;
-        max-width: 75vw;
+        max-width: 68rem;
         margin: 0 auto;
     }
 
