--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
 @import "_comun";
 @import "_plenos";
 @import "_header";
+@import "_buscador";
 @import "_footer";
 @import "_width";
 @import "_color";
