--- a/src/css/_plenos.css
+++ b/src/css/_plenos.css
@@ -38,6 +38,30 @@
     border-top: 1px solid var(--grey);
 }
 
+.contenedor-plenos-btn {
+    padding: 1rem;
+}
+
+.contenedor-plenos-btn-titulo {
+    font-size: 1rem;
+    font-family: var(--fontPlex);
+    margin: 0;
+}
+
+.contenedor-plenos-btn-txt {
+    color: var(--bunting);
+    font-weight: 600;
+    text-decoration: none;
+}
+
+@media only screen and (min-width: 30em) {
+
+    .contenedor-plenos-btn-titulo {
+        font-size: 2rem;
+    }
+
+}
+
 @media only screen and (min-width: 48em) {
 
     .nav-plenos {
@@ -60,10 +84,14 @@
 
 }
 
-@media only screen and (min-width: 48em) {
+@media only screen and (min-width: 64em) {
 
     .contenedor-plenos {
         padding: 1rem 0;
+    }
+
+    .contenedor-plenos-btn {
+        padding: 2rem 0;
     }
 
 }
